--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-pwa": "^5.6.0",
     "openai": "^4.67.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
